force-app/main/default/objects/Shipping_Manifest__c/Shipping_Manifest__c.object-meta.xml
<CustomObject>
    <description>Used in the generation of compliance document to enable retail delivery.</description>
    <label>Shipping Manifest</label>
    <nameField>
        <displayFormat>SM-{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>Shipping Manifest</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Manifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>