force-app/main/default/objects/Shipping_Manifest__c/fields/Actual_Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Arrival_Date_Time__c</fullName>
    <label>Actual Arrival Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>