force-app/main/default/objects/Shipping_Manifest__c/fields/Actual_Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Actual_Receiver_Name__c</fullName>
    <label>Actual Receiver Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>