force-app/main/default/objects/Shipping_Manifest__c/fields/Box_Count__c.field-meta.xml
<CustomField>
    <fullName>Box_Count__c</fullName>
    <inlineHelpText>Input Shipment Total Box Count</inlineHelpText>
    <label>Box Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>