force-app/main/default/objects/Shipping_Manifest__c/fields/Customer_PO_or_Quote__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_or_Quote__c</fullName>
    <inlineHelpText>Input to capture customer purchase order, other external platform quotes or orders.</inlineHelpText>
    <label>Order or Service #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>