force-app/main/default/objects/Shipping_Manifest__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <formula>IF( RecordTypeId = &quot;0126A000000isgx&quot;, 
Supplier_Address__c &amp; &quot;,&quot; &amp; &quot; &quot; &amp; Supplier_City_State_Zip__c ,  
Receiver_Address__c &amp; &quot;,&quot; &amp; &quot; &quot; &amp; Receiver_City_State_Zip__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Pick-up will be Supplier Location, If Delivery will be Receiver Location as Destination</inlineHelpText>
    <label>Destination</label>
    <type>Text</type>
</CustomField>