force-app/main/default/objects/Shipping_Manifest__c/fields/Distributor_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Distributor_City_State_Zip__c</fullName>
    <formula>Text(Distributor_License__r.License_City__c) + &quot;, &quot; + 
Text(Distributor_License__r.License_State__c) + &quot;, &quot; + 
Distributor_License__r.License_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor City, State, Zip</label>
    <type>Text</type>
</CustomField>