force-app/main/default/objects/Shipping_Manifest__c/fields/Distributor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shipping Manifests (Distributor Contact)</relationshipLabel>
    <relationshipName>Shipping_Manifests1</relationshipName>
    <type>Lookup</type>
</CustomField>