force-app/main/default/objects/Shipping_Manifest__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Drivers__c</referenceTo>
    <relationshipLabel>Shipping Manifests</relationshipLabel>
    <relationshipName>Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>