force-app/main/default/objects/Shipping_Manifest__c/fields/Driver_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Number__c</fullName>
    <formula>Driver__r.Driver_License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver License Number</label>
    <type>Text</type>
</CustomField>