force-app/main/default/objects/Shipping_Manifest__c/fields/EstimatedArrival_DateTime__c.field-meta.xml
<CustomField>
    <fullName>EstimatedArrival_DateTime__c</fullName>
    <description>Estimated Arrival Date &amp; Time</description>
    <inlineHelpText>Estimated Arrival Date &amp; Time</inlineHelpText>
    <label>Estimated Arrival Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>