force-app/main/default/objects/Shipping_Manifest__c/fields/EstimatedDeparture_DateTime__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDeparture_DateTime__c</fullName>
    <description>Estimated Departure Date &amp; Time</description>
    <inlineHelpText>Estimated Departure Date &amp; Time</inlineHelpText>
    <label>Estimated Departure Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>