force-app/main/default/objects/Shipping_Manifest__c/fields/Geocode_Error__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Error__c</fullName>
    <label>Geocode Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>