force-app/main/default/objects/Shipping_Manifest__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Shipping Manifests</relationshipLabel>
    <relationshipName>Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>