force-app/main/default/objects/Shipping_Manifest__c/fields/Is_Sent_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Sent_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sent Email</label>
    <type>Checkbox</type>
</CustomField>