force-app/main/default/objects/Shipping_Manifest__c/fields/Metrc_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Metrc_Manifest__c</fullName>
    <label>Metrc Manifest#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>