force-app/main/default/objects/Shipping_Manifest__c/fields/Multi_Transport__c.field-meta.xml
<CustomField>
    <fullName>Multi_Transport__c</fullName>
    <formula>Sales_Order__r.Multi_Transport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multi-Transport</label>
    <type>Checkbox</type>
</CustomField>