force-app/main/default/objects/Shipping_Manifest__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shipping Manifests</relationshipLabel>
    <relationshipName>Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>