force-app/main/default/objects/Shipping_Manifest__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order placed from Community portal</description>
    <inlineHelpText>Order placed from Community portal</inlineHelpText>
    <label>Order Number</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Retail_Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>