force-app/main/default/objects/Shipping_Manifest__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Picklist</label>
    <referenceTo>Picklist__c</referenceTo>
    <relationshipLabel>Shipping Manifests</relationshipLabel>
    <relationshipName>Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>