force-app/main/default/objects/Shipping_Manifest__c/fields/Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date__c</fullName>
    <formula>TEXT(MONTH(Planned_Ship_Transfer_Date__c)) + &apos;/&apos; +  TEXT(DAY(Planned_Ship_Transfer_Date__c)) + &apos;/&apos; + TEXT(YEAR(Planned_Ship_Transfer_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Date</label>
    <type>Text</type>
</CustomField>