force-app/main/default/objects/Shipping_Manifest__c/fields/Planned_Ship_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Ship_Transfer_Date__c</fullName>
    <inlineHelpText>Date in which the products are to be delivered</inlineHelpText>
    <label>Planned Ship/Transfer Date</label>
    <type>Date</type>
</CustomField>