force-app/main/default/objects/Shipping_Manifest__c/fields/Previous_Planned_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Planned_Ship_Date__c</fullName>
    <label>Previous Planned Ship Date</label>
    <type>Date</type>
</CustomField>