force-app/main/default/objects/Shipping_Manifest__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
            <value>
                <fullName>P6</fullName>
            </value>
            <value>
                <fullName>P7</fullName>
            </value>
            <value>
                <fullName>P8</fullName>
            </value>
            <value>
                <fullName>P9</fullName>
            </value>
            <value>
                <fullName>P10</fullName>
            </value>
            <value>
                <fullName>P11</fullName>
            </value>
            <value>
                <fullName>P12</fullName>
            </value>
            <value>
                <fullName>P13</fullName>
            </value>
            <value>
                <fullName>P14</fullName>
            </value>
            <value>
                <fullName>P15</fullName>
            </value>
            <value>
                <fullName>P16</fullName>
            </value>
            <value>
                <fullName>P17</fullName>
            </value>
            <value>
                <fullName>P18</fullName>
            </value>
            <value>
                <fullName>P19</fullName>
            </value>
            <value>
                <fullName>P20</fullName>
            </value>
            <value>
                <fullName>P21</fullName>
            </value>
            <value>
                <fullName>P22</fullName>
            </value>
            <value>
                <fullName>P23</fullName>
            </value>
            <value>
                <fullName>P24</fullName>
            </value>
            <value>
                <fullName>P25</fullName>
            </value>
            <value>
                <fullName>P26</fullName>
            </value>
            <value>
                <fullName>P27</fullName>
            </value>
            <value>
                <fullName>P28</fullName>
            </value>
            <value>
                <fullName>P29</fullName>
            </value>
            <value>
                <fullName>P30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>