force-app/main/default/objects/Shipping_Manifest__c/fields/Receiver_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Acceptance_Date__c</fullName>
    <inlineHelpText>Date Which Receiver Accepted Retail Shipment</inlineHelpText>
    <label>Receiver Acceptance Date</label>
    <type>DateTime</type>
</CustomField>