force-app/main/default/objects/Shipping_Manifest__c/fields/Receiver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shipping Manifests (Receiver Contact)</relationshipLabel>
    <relationshipName>Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>