force-app/main/default/objects/Shipping_Manifest__c/fields/Receiver_Email__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Email__c</fullName>
    <formula>Receiver_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver Email</label>
    <type>Text</type>
</CustomField>