force-app/main/default/objects/Shipping_Manifest__c/fields/Receiver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Phone__c</fullName>
    <formula>Receiver_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver Phone</label>
    <type>Text</type>
</CustomField>