force-app/main/default/objects/Shipping_Manifest__c/fields/Rescheduled_Approved__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rescheduled Approved</label>
    <type>Checkbox</type>
</CustomField>