force-app/main/default/objects/Shipping_Manifest__c/fields/Route_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Route_End_Time__c</fullName>
    <label>Route End Time</label>
    <type>Time</type>
</CustomField>