force-app/main/default/objects/Shipping_Manifest__c/fields/Route_Miles__c.field-meta.xml
<CustomField>
    <fullName>Route_Miles__c</fullName>
    <description>(Distance(Distributor_License__r.License_Location__c , Receiver_License__r.License_Location__c , &apos;mi&apos;)*1.3)</description>
    <formula>Total_Route_Miles__c *2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Trip Miles</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>