force-app/main/default/objects/Shipping_Manifest__c/fields/Ship_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Confirmation_Date__c</fullName>
    <label>Ship Confirmation Date</label>
    <type>Date</type>
</CustomField>