force-app/main/default/objects/Shipping_Manifest__c/fields/Shipment_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Instructions__c</fullName>
    <label>Shipment Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>