force-app/main/default/objects/Shipping_Manifest__c/fields/Slack_Notes__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notes__c</fullName>
    <description>Used in Ship confirm console and posting msg to Slack Driver channel. DO NOT modify/enable in layout.</description>
    <label>Slack Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>