force-app/main/default/objects/Shipping_Manifest__c/fields/Supplier_Address__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Address__c</fullName>
    <formula>Supplier_License__r.License_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Address</label>
    <type>Text</type>
</CustomField>