force-app/main/default/objects/Shipping_Manifest__c/fields/Supplier_License__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier License</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>State_Licenses__c.License_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Shipping Manifests (Supplier License)</relationshipLabel>
    <relationshipName>Shipping_Manifests2</relationshipName>
    <type>Lookup</type>
</CustomField>