force-app/main/default/objects/Shipping_Manifest__c/fields/Supplier_License_Class__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License_Class__c</fullName>
    <formula>TEXT(Supplier_License__r.License_Class__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier License Class</label>
    <type>Text</type>
</CustomField>