force-app/main/default/objects/Shipping_Manifest__c/fields/Supplier_Zone__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Zone__c</fullName>
    <formula>TEXT(Supplier_License__r.Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Zone</label>
    <type>Text</type>
</CustomField>