force-app/main/default/objects/Shipping_Manifest__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <summarizedField>Shipping_Manifest_Line__c.Line_Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Shipping_Manifest_Line__c.SMLine_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Shipping_Manifest_Line__c.Shipping_Manifest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>