force-app/main/default/objects/Shipping_Manifest__c/fields/Total_Route_Miles__c.field-meta.xml
<CustomField>
    <fullName>Total_Route_Miles__c</fullName>
    <inlineHelpText>Total route distance between Distributor License and Receiver License.</inlineHelpText>
    <label>Total Route Miles</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>