force-app/main/default/objects/Shipping_Manifest__c/fields/Track_Trace_Sync__c.field-meta.xml
<CustomField>
    <fullName>Track_Trace_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Track_Trace_Sync__c - used for Metrc integration</description>
    <label>Track &amp; Trace Sync</label>
    <type>Checkbox</type>
</CustomField>