force-app/main/default/objects/Shipping_Manifest__c/fields/TSM_Type__c.field-meta.xml
<CustomField>
    <fullName>TSM_Type__c</fullName>
    <label>TSM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>