force-app/main/default/objects/Shipping_Manifest__c/fields/Vehicle_LPN__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_LPN__c</fullName>
    <description>Vehicle License Plate Number</description>
    <formula>Vehicle__r.Vehicle_License_Plate_Number__c</formula>
    <inlineHelpText>Vehicle License Plate Number</inlineHelpText>
    <label>Vehicle LPN</label>
    <type>Text</type>
</CustomField>