force-app/main/default/objects/Shipping_Manifest__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <formula>TEXT(Vehicle__r.Vehicle_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Model</label>
    <type>Text</type>
</CustomField>