force-app/main/default/objects/Shipping_Manifest__c/fields/Window_End__c.field-meta.xml
<CustomField>
    <fullName>Window_End__c</fullName>
    <inlineHelpText>Latest time receiver can accept shipment</inlineHelpText>
    <label>Window End</label>
    <type>Time</type>
</CustomField>