force-app/main/default/objects/Shipping_Manifest__c/fields/Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Window_Start__c</fullName>
    <inlineHelpText>Earliest time receiver can accept shipment</inlineHelpText>
    <label>Window Start</label>
    <type>Time</type>
</CustomField>