force-app/main/default/objects/Shipping_Manifest__c/fields/Work_Week__c.field-meta.xml
<CustomField>
    <fullName>Work_Week__c</fullName>
    <formula>IF(
   CEILING( (  Ship_Confirmation_Date__c  - DATE( YEAR( Ship_Confirmation_Date__c ), 1, 1) + 1) / 7) &gt; 52,
   52,
   CEILING( ( Ship_Confirmation_Date__c - DATE( YEAR( Ship_Confirmation_Date__c ), 1, 1) + 1) / 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>