force-app/main/default/objects/Shipping_Manifest__c/recordTypes/Cash_Collection.recordType-meta.xml
<RecordType>
    <fullName>Cash_Collection</fullName>
    <active>true</active>
    <description>Used for Cash Collection Route</description>
    <label>Cash Collection</label>
</RecordType>